--- a/less/header.less
+++ b/less/header.less
@@ -5,12 +5,36 @@ header {
         border: 1px solid black;
         display: flex;
         justify-content: space-between;
-        height: 150px;
+        height: 100px;
+        background-color:#050505;
+
+        div.logo {
+            color: white;
+            display: flex;
+            align-items: center;
+            margin: 50px;
+            font-family: 'Alegreya Sans SC', sans-serif;
+            font-size: 2.5em;
+
+            span {
+                color: #FFB612;
+            }
+        }
 
         div.links {
-            margin-top: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: flex-end;
             a {
-                
+               margin-right: 20px;
+               font-family: 'Rajdhani', sans-serif;
+               text-decoration: none;
+               font-size: 1.5rem;
+               color: #FFFFFF;
+
+               &:hover {
+                   color: #FFB612;
+               }
             }
         }
     }
