--- a/less/header.less
+++ b/less/header.less
@@ -15,7 +15,10 @@ header {
             margin: 50px;
             font-family: 'Alegreya Sans SC', sans-serif;
             font-size: 2.5em;
-
+            a {
+                text-decoration: none;
+                color: #FFFFFF;
+            }
             span {
                 color: #FFB612;
             }
@@ -34,6 +37,8 @@ header {
 
                &:hover {
                    color: #FFB612;
+                   text-decoration: underline;
+                //    text-decoration-color: #FFB612;
                }
             }
         }
