added some images to the project and minor changes to the navigation bar. still working on the rest of the page

--- a/less/intro.less
+++ b/less/intro.less
@@ -1,4 +1,10 @@
 .intro {
-    height: 100vh;
+    // height: 100vh;
     
+    .box {
+        margin: 0 auto;
+        height: 446px;
+        width: 303px;
+        border: 1px solid black;
+    }
 }
