--- a/css/index.css
+++ b/css/index.css
@@ -131,13 +131,13 @@ header nav {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  background-color: #050505;
+  background-color: #1D1013;
 }
 header nav div.logo {
   color: white;
   display: flex;
   align-items: center;
-  margin: 50px;
+  margin: 1%;
   font-family: 'Alegreya Sans SC', sans-serif;
   font-size: 2.5em;
 }
@@ -149,12 +149,13 @@ header nav div.logo span {
   color: #FFB612;
 }
 header nav div.links {
-  margin-bottom: 20px;
+  margin: 1%;
   display: flex;
   align-items: flex-end;
+  width: 350px;
 }
 header nav div.links a {
-  margin-right: 20px;
+  margin-right: 5%;
   font-family: 'Rajdhani', sans-serif;
   text-decoration: none;
   font-size: 1.5rem;
@@ -164,6 +165,9 @@ header nav div.links a:hover {
   color: #FFB612;
   text-decoration: underline;
 }
-.intro {
-  height: 100vh;
+.intro .box {
+  margin: 0 auto;
+  height: 446px;
+  width: 303px;
+  border: 1px solid black;
 }
