--- a/less/header.less
+++ b/less/header.less
@@ -6,13 +6,13 @@ header {
         display: flex;
         justify-content: space-between;
         height: 100px;
-        background-color:#050505;
+        background-color: #1D1013;
 
         div.logo {
             color: white;
             display: flex;
             align-items: center;
-            margin: 50px;
+            margin: 1%;
             font-family: 'Alegreya Sans SC', sans-serif;
             font-size: 2.5em;
             a {
@@ -25,11 +25,14 @@ header {
         }
 
         div.links {
-            margin-bottom: 20px;
+            margin: 1%;
             display: flex;
             align-items: flex-end;
+            // border: 1px solid green;
+            width: 350px;
             a {
-               margin-right: 20px;
+               margin-right: 5%;
+            //    border: 1px solid dodgerblue;
                font-family: 'Rajdhani', sans-serif;
                text-decoration: none;
                font-size: 1.5rem;
