--- a/less/header.less
+++ b/less/header.less
@@ -1,12 +1,12 @@
 header {
-    // border: 1px solid green;
+    // border: 1px solid red;
     
     nav {
         border: 1px solid black;
         display: flex;
         justify-content: space-between;
-        height: 100px;
-        background-color: #1D1013;
+        // height: 100px;
+        background-color: rgb(7, 0, 2);
 
         div.logo {
             color: white;
@@ -21,6 +21,11 @@ header {
             }
             span {
                 color: #FFB612;
+            }
+
+            img {
+                height: 50px;
+                width: 50px;
             }
         }
 
@@ -40,7 +45,7 @@ header {
 
                &:hover {
                    color: #FFB612;
-                   text-decoration: underline;
+                   text-decoration: underline overline;
                 //    text-decoration-color: #FFB612;
                }
             }
