--- a/less/intro.less
+++ b/less/intro.less
@@ -1,27 +1,47 @@
 .intro {
-    height: 100vh;
+    height: 85vh;
+    background-image: url("/images/africanMarket.jpg");
+    background-size: cover;
+    margin: 0;
+    // margin-top: -240px;
     
     .box {
-        margin: 10% auto;
+        // margin: 10% 33%;
         height: 470px;
-        width: 800px;
-        border: 3px solid black;
+        width: 1000px;
+        border: 1px solid black;
+        background-color: #070002;
+        opacity: 0.9;
+        
 
-        h1 {
+
+        // padding: 20px 20px 30px;
+        // background: rgba(0, 0, 0, 0.9);
+        // text-align: center;
+        // transition: none 0s ease 0s;
+        // line-height: 42px;
+        // border-width: 0px;
+        // margin: 0px;
+        // letter-spacing: 2px;
+        // font-weight: 800;
+        // font-size: 30px;
+
+        h2 {
             font-family: Rajdhani;
             text-align: center;
             margin: 2% 0 1% ;
             font-size: 4rem;
+            color: #fff;
+            letter-spacing: 3px;
+            font-weight: 900;
         }
 
         hr {
-            display: block; 
+            color: #FFB612;
+            display: block;
             content: ""; 
             height: 30px; 
-            margin-top: -31px;
-            margin-left: 4%;
-            margin-right: 4%;
-            margin-bottom: 2%; 
+            margin: -31px, 4%, 2%, 4%; 
             border-style: solid; 
             border-color: #8c8b8b; 
             border-width: 0 0 1px 0; 
@@ -29,8 +49,11 @@
         }
 
         p {
-            margin: 0 2%;
+            margin: 2% 1%;
             font-size: 2em;
+            color: #fff;
+            letter-spacing: 2px;
+            font-weight: 700;
         }
     }
 }
