--- a/less/middle.less
+++ b/less/middle.less
@@ -1,4 +1,40 @@
 .middle {
     // line-height: 47px;
-    margin: 0;
+    margin-bottom: 2%;
+
+    div.mission {
+        margin: 0;
+        height: 30vh;
+        background-color: #FFB612;
+
+        h2 {
+            font-family: 'Rajdhani', sans-serif;
+            text-align: center;
+            padding: 2%;
+            font-size: 3rem;
+            font-weight: 900;
+        }
+
+        p {
+            text-align: center;
+            font-family: 'Alegreya Sans SC', sans-serif;
+            font-size: 2rem;
+            font-weight: 600;
+        }
+    }
+
+    .first, .second, .third {
+        margin: 5%;
+        display: flex;
+    }
+
+    .first {
+        .image {
+            img {
+                height: 600px;
+                width: 700px;
+            }
+            
+        }
+    }
 }
