--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,7 @@ header nav div.links a:hover {
   height: 85vh;
   background-image: url("/images/africanMarket.jpg");
   background-size: cover;
-  margin: 0;
+  max-width: 100%;
 }
 .intro .box {
   height: 470px;
@@ -180,6 +180,33 @@ header nav div.links a:hover {
   border: 1px solid black;
   background-color: #070002;
   opacity: 0.9;
+}
+.intro .box .myButton {
+  box-shadow: 0px 1px 0px 0px #fff6af;
+  background: linear-gradient(to bottom, #ffec64 5%, #FFB612, 100%);
+  background-color: #ffec64;
+  border-radius: 6px;
+  border: 1px solid #ffaa22;
+  display: inline-block;
+  cursor: pointer;
+  color: #333333;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffee66;
+}
+.intro .box .myButton:hover {
+  background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+  background-color: #ffab23;
+}
+.intro .box .myButton:active {
+  position: relative;
+  top: 1px;
+}
+.intro .box a {
+  color: #070002;
 }
 .intro .box h2 {
   font-family: Rajdhani;
@@ -209,7 +236,7 @@ header nav div.links a:hover {
   font-weight: 700;
 }
 .middle {
-  margin-bottom: 2%;
+  margin-bottom: 5%;
 }
 .middle div.mission {
   margin: 0;
@@ -220,22 +247,71 @@ header nav div.links a:hover {
   font-family: 'Rajdhani', sans-serif;
   text-align: center;
   padding: 2%;
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: 900;
+  letter-spacing: 2px;
+  text-decoration: overline;
 }
 .middle div.mission p {
-  text-align: center;
+  text-align: start;
   font-family: 'Alegreya Sans SC', sans-serif;
   font-size: 2rem;
   font-weight: 600;
+  margin: 0 10%;
+  letter-spacing: 2px;
 }
 .middle .first,
 .middle .second,
 .middle .third {
-  margin: 5%;
+  margin: 10% 3%;
   display: flex;
 }
-.middle .first .image img {
-  height: 600px;
-  width: 700px;
+.middle .first .image,
+.middle .second .image,
+.middle .third .image {
+  width: 50%;
+}
+.middle .first .image img,
+.middle .second .image img,
+.middle .third .image img {
+  vertical-align: top;
+  height: auto;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.middle .first .target,
+.middle .second .target,
+.middle .third .target {
+  width: 50%;
+  margin: 0 1% 0 7%;
+}
+.middle .first .target h3,
+.middle .second .target h3,
+.middle .third .target h3 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 4.5rem;
+  margin-bottom: 2%;
+  text-decoration: underline #FFB612;
+  letter-spacing: 1px;
+}
+.middle .first .target p,
+.middle .second .target p,
+.middle .third .target p {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  padding: 1%;
+}
+.middle .first .target p:hover,
+.middle .second .target p:hover,
+.middle .third .target p:hover {
+  background-color: #FFB612;
+  color: #070002;
+  font-weight: 800;
+}
+.middle .second .target {
+  margin: 0 7% 0 1%;
+  vertical-align: top;
 }
