--- a/less/intro.less
+++ b/less/intro.less
@@ -2,7 +2,7 @@
     height: 85vh;
     background-image: url("/images/africanMarket.jpg");
     background-size: cover;
-    margin: 0;
+    max-width: 100%;
     // margin-top: -240px;
     
     .box {
@@ -12,6 +12,31 @@
         border: 1px solid black;
         background-color: #070002;
         opacity: 0.9;
+
+        .myButton {
+            box-shadow: 0px 1px 0px 0px #fff6af;
+            background:linear-gradient(to bottom, #ffec64 5%, #FFB612, 100%);
+            background-color:#ffec64;
+            border-radius:6px;
+            border:1px solid #ffaa22;
+            display:inline-block;
+            cursor:pointer;
+            color:#333333;
+            font-family:Arial;
+            font-size:15px;
+            font-weight:bold;
+            padding:6px 24px;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #ffee66;
+        }
+        .myButton:hover {
+            background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+            background-color:#ffab23;
+        }
+        .myButton:active {
+            position:relative;
+            top:1px;
+        }
         
 
 
@@ -25,6 +50,10 @@
         // letter-spacing: 2px;
         // font-weight: 800;
         // font-size: 30px;
+
+        a {
+            color: #070002;
+        }
 
         h2 {
             font-family: Rajdhani;
