just about done with the landing page. Everything is coming together. Now working on the content I want to display on the website

--- a/less/middle.less
+++ b/less/middle.less
@@ -2,9 +2,14 @@
     // line-height: 47px;
     margin-bottom: 5%;
 
+    hr {
+        border-top: 1px solid #8c8b8b;
+        margin: 0 25%;
+    }
+
     div.mission {
         margin: 0;
-        height: 30vh;
+        height: min-content;
         background-color: #FFB612;
 
         h2 {
@@ -22,8 +27,11 @@
             font-family: 'Alegreya Sans SC', sans-serif;
             font-size: 2rem;
             font-weight: 600;
+            color: #070002;
+            height: min-content;
             margin: 0 10%;
-            letter-spacing: 2px;
+            padding-bottom: 3%;
+            letter-spacing: 2px; 
         }
     }
 
@@ -38,7 +46,7 @@
                 height: auto;
                 width: 100%;
                 border-radius: 8px;
-                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
                 }           
             }
             .target {
@@ -46,7 +54,6 @@
                 margin: 0 1% 0 7%;
 
                 h3 {
-            
                     font-family: 'Raleway', sans-serif;
                     font-size: 4.5rem;
                     margin-bottom: 2%;
