--- a/css/index.css
+++ b/css/index.css
@@ -172,14 +172,15 @@ header nav div.links a:hover {
   height: 85vh;
   background-image: url("/images/africanMarket.jpg");
   background-size: cover;
-  max-width: 100%;
+  min-width: 100%;
 }
 .intro .box {
-  height: 470px;
+  height: min-content;
   width: 1000px;
   border: 1px solid black;
   background-color: #070002;
   opacity: 0.9;
+  margin: auto;
 }
 .intro .box .myButton {
   box-shadow: 0px 1px 0px 0px #fff6af;
@@ -218,15 +219,8 @@ header nav div.links a:hover {
   font-weight: 900;
 }
 .intro .box hr {
-  color: #FFB612;
-  display: block;
-  content: "";
-  height: 30px;
-  margin: -31px, 4%, 2%, 4%;
-  border-style: solid;
-  border-color: #8c8b8b;
-  border-width: 0 0 1px 0;
-  border-radius: 20px;
+  border-top: 1px solid #8c8b8b;
+  margin: 0 %;
 }
 .intro .box p {
   margin: 2% 1%;
@@ -238,9 +232,13 @@ header nav div.links a:hover {
 .middle {
   margin-bottom: 5%;
 }
+.middle hr {
+  border-top: 1px solid #8c8b8b;
+  margin: 0 25%;
+}
 .middle div.mission {
   margin: 0;
-  height: 30vh;
+  height: min-content;
   background-color: #FFB612;
 }
 .middle div.mission h2 {
@@ -257,7 +255,10 @@ header nav div.links a:hover {
   font-family: 'Alegreya Sans SC', sans-serif;
   font-size: 2rem;
   font-weight: 600;
+  color: #070002;
+  height: min-content;
   margin: 0 10%;
+  padding-bottom: 3%;
   letter-spacing: 2px;
 }
 .middle .first,
@@ -278,7 +279,7 @@ header nav div.links a:hover {
   height: auto;
   width: 100%;
   border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
 }
 .middle .first .target,
 .middle .second .target,
@@ -314,4 +315,90 @@ header nav div.links a:hover {
 .middle .second .target {
   margin: 0 7% 0 1%;
   vertical-align: top;
+}
+.last {
+  background-color: #FFB612;
+  height: min-content;
+}
+.last h2 {
+  font-size: 100px;
+  margin: 5% auto;
+  padding-top: 3%;
+  width: max-content;
+  color: #070002;
+  font-family: 'Alegreya Sans SC', sans-serif;
+}
+.last .main {
+  display: flex;
+  justify-content: space-around;
+}
+.last .main .info {
+  width: 20%;
+  height: min-content;
+  background-color: #FFF;
+  margin-bottom: 1%;
+}
+.last .main .info hr {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  margin-bottom: 5%;
+}
+.last .main .info h3 {
+  color: #070002;
+  margin: 2% auto 10%;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 2.3rem;
+}
+.last .main .info p {
+  color: #070002;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 2rem;
+  margin: 0 2%;
+}
+.footer div {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  background-color: #070002;
+}
+.footer div div.logo {
+  color: white;
+  display: flex;
+  align-items: center;
+  margin: 1%;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 2.5em;
+}
+.footer div div.logo a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.footer div div.logo span {
+  color: #FFB612;
+}
+.footer div div.logo img {
+  height: 50px;
+  width: 50px;
+}
+.footer div div.links {
+  margin: 1%;
+  display: flex;
+  align-items: flex-end;
+  width: 350px;
+}
+.footer div div.links a {
+  margin-right: 5%;
+  font-family: 'Rajdhani', sans-serif;
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: #FFFFFF;
+}
+.footer div div.links a:hover {
+  color: #FFB612;
+  text-decoration: underline overline;
 }
