--- a/less/intro.less
+++ b/less/intro.less
@@ -2,16 +2,18 @@
     height: 85vh;
     background-image: url("/images/africanMarket.jpg");
     background-size: cover;
-    max-width: 100%;
+    min-width: 100%;
     // margin-top: -240px;
     
     .box {
         // margin: 10% 33%;
-        height: 470px;
+        height: min-content;
         width: 1000px;
         border: 1px solid black;
         background-color: #070002;
         opacity: 0.9;
+        margin: auto;
+
 
         .myButton {
             box-shadow: 0px 1px 0px 0px #fff6af;
@@ -66,15 +68,8 @@
         }
 
         hr {
-            color: #FFB612;
-            display: block;
-            content: ""; 
-            height: 30px; 
-            margin: -31px, 4%, 2%, 4%; 
-            border-style: solid; 
-            border-color: #8c8b8b; 
-            border-width: 0 0 1px 0; 
-            border-radius: 20px; 
+            border-top: 1px solid #8c8b8b;
+            margin: 0 %; 
         }
 
         p {
