--- a/less/intro.less
+++ b/less/intro.less
@@ -1,6 +1,6 @@
 .intro {
     height: 85vh;
-    background-image: url("/images/africanMarket.jpg");
+    background-image: url("/images/africanWomen.jpg");
     background-size: cover;
     min-width: 100%;
     // margin-top: -240px;
