--- a/less/header.less
+++ b/less/header.less
@@ -2,10 +2,9 @@ header {
     // border: 1px solid red;
     
     nav {
-        border: 1px solid black;
+        // border: 1px solid black;
         display: flex;
         justify-content: space-between;
-        // height: 100px;
         background-color: rgb(7, 0, 2);
 
         div.logo {
