added the finishing touches and closer to color/font choices. Just have to mainly work on the footer and get the mobile/tablet views up and going

--- a/less/footer.less
+++ b/less/footer.less
@@ -3,12 +3,35 @@
         border: 1px solid black;
         display: flex;
         justify-content: space-between;
-        // height: 100px;
+        height: 105px;
         background-color: rgb(7, 0, 2);
         
+    
+
         img {
             height: 50px;
             width: 50px;
+        }
+
+        .links {
+            a {
+                margin-right: 1%;
+                text-decoration: none;
+                font-size: 18px;
+                color: #FFFFFF;
+            }
+            
+        }
+
+        .social {
+
+            img {
+                height: 50px;
+                width: 50px;
+                background-color: lightgray;
+                
+            }
+
         }
         
     }
