--- a/less/middle.less
+++ b/less/middle.less
@@ -4,13 +4,14 @@
 
     hr {
         border-top: 1px solid #8c8b8b;
-        margin: 0 25%;
+        margin: 20px 25%;
     }
 
     div.mission {
         margin: 0;
         height: min-content;
-        background-color: #FFB612;
+        background-color: #DE3831;
+        margin-bottom: 20px;
 
         h2 {
             font-family: 'Rajdhani', sans-serif;
@@ -36,29 +37,34 @@
     }
 
     .first, .second, .third {
-        margin: 10% 3%;
+        margin: 3% 0;
         display: flex;
 
         .image {
-            width: 50%;
+            width: 40%;
             img {
                 vertical-align: top;
                 height: auto;
                 width: 100%;
                 border-radius: 8px;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
+                
                 }           
             }
             .target {
                 width: 50%;
                 margin: 0 1% 0 7%;
+                border-radius: 8px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
+                height: min-content;
 
                 h3 {
                     font-family: 'Raleway', sans-serif;
                     font-size: 4.5rem;
                     margin-bottom: 2%;
-                    text-decoration:  underline #FFB612;
+                    text-decoration:  underline #002395;
                     letter-spacing: 1px;
+                    padding: 2%;
                 }
         
                 p {
@@ -78,7 +84,12 @@
             
     }
 
+    .first, .third {
+        margin-left: 50px;
+    }
+
     .second {
+        // background-color: #007A4D;
         
         .target {
             margin: 0 7% 0 1%;
