--- a/css/index.css
+++ b/css/index.css
@@ -168,18 +168,18 @@ header nav div.links a:hover {
   text-decoration: underline overline;
 }
 .intro {
-  height: 85vh;
+  height: 90vh;
   background-image: url("/images/africanWomen.jpg");
   background-size: cover;
   min-width: 100%;
 }
 .intro .box {
+  margin: 250px auto;
   height: min-content;
   width: 1000px;
   border: 1px solid black;
   background-color: #070002;
   opacity: 0.9;
-  margin: auto;
 }
 .intro .box .myButton {
   box-shadow: 0px 1px 0px 0px #fff6af;
@@ -233,12 +233,13 @@ header nav div.links a:hover {
 }
 .middle hr {
   border-top: 1px solid #8c8b8b;
-  margin: 0 25%;
+  margin: 20px 25%;
 }
 .middle div.mission {
   margin: 0;
   height: min-content;
-  background-color: #FFB612;
+  background-color: #DE3831;
+  margin-bottom: 20px;
 }
 .middle div.mission h2 {
   font-family: 'Rajdhani', sans-serif;
@@ -263,13 +264,13 @@ header nav div.links a:hover {
 .middle .first,
 .middle .second,
 .middle .third {
-  margin: 10% 3%;
+  margin: 3% 0;
   display: flex;
 }
 .middle .first .image,
 .middle .second .image,
 .middle .third .image {
-  width: 50%;
+  width: 40%;
 }
 .middle .first .image img,
 .middle .second .image img,
@@ -285,6 +286,9 @@ header nav div.links a:hover {
 .middle .third .target {
   width: 50%;
   margin: 0 1% 0 7%;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
+  height: min-content;
 }
 .middle .first .target h3,
 .middle .second .target h3,
@@ -292,8 +296,9 @@ header nav div.links a:hover {
   font-family: 'Raleway', sans-serif;
   font-size: 4.5rem;
   margin-bottom: 2%;
-  text-decoration: underline #FFB612;
+  text-decoration: underline #002395;
   letter-spacing: 1px;
+  padding: 2%;
 }
 .middle .first .target p,
 .middle .second .target p,
@@ -310,6 +315,10 @@ header nav div.links a:hover {
   background-color: #FFB612;
   color: #070002;
   font-weight: 800;
+}
+.middle .first,
+.middle .third {
+  margin-left: 50px;
 }
 .middle .second .target {
   margin: 0 7% 0 1%;
@@ -363,9 +372,21 @@ header nav div.links a:hover {
   border: 1px solid black;
   display: flex;
   justify-content: space-between;
+  height: 105px;
   background-color: #070002;
 }
 .footer div.bttm img {
   height: 50px;
   width: 50px;
+}
+.footer div.bttm .links a {
+  margin-right: 1%;
+  text-decoration: none;
+  font-size: 18px;
+  color: #FFFFFF;
+}
+.footer div.bttm .social img {
+  height: 50px;
+  width: 50px;
+  background-color: lightgray;
 }
