--- a/less/intro.less
+++ b/less/intro.less
@@ -1,18 +1,18 @@
 .intro {
-    height: 85vh;
+    height: 90vh;
     background-image: url("/images/africanWomen.jpg");
     background-size: cover;
     min-width: 100%;
     // margin-top: -240px;
     
     .box {
-        // margin: 10% 33%;
+        margin: 250px auto;
         height: min-content;
         width: 1000px;
         border: 1px solid black;
         background-color: #070002;
         opacity: 0.9;
-        margin: auto;
+        // margin: auto;
 
 
         .myButton {
