--- a/less/middle.less
+++ b/less/middle.less
@@ -1,5 +1,4 @@
 .middle {
-    // line-height: 47px;
     margin-bottom: 5%;
 
     hr {
@@ -17,7 +16,7 @@
             font-family: 'Rajdhani', sans-serif;
             text-align: center;
             padding: 2%;
-            font-size: 5rem;
+            font-size: 3rem;
             font-weight: 900;
             letter-spacing: 2px;
             text-decoration: overline;
@@ -26,7 +25,7 @@
         p {
             text-align: start;
             font-family: 'Alegreya Sans SC', sans-serif;
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: 600;
             color: #070002;
             height: min-content;
@@ -57,20 +56,21 @@
                 border-radius: 8px;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
                 height: min-content;
+                background-color: #F4F0DB; opacity: 10;
 
                 h3 {
                     font-family: 'Raleway', sans-serif;
-                    font-size: 4.5rem;
+                    font-size: 3rem;
                     margin-bottom: 2%;
-                    text-decoration:  underline #002395;
+                    text-decoration:  underline #FFB612;
                     letter-spacing: 1px;
                     padding: 2%;
                 }
         
                 p {
                     font-family: 'Rajdhani', sans-serif;
-                    font-size: 30px;
-                    font-weight: 500;
+                    font-size: 1.3rem;
+                    font-weight: 700;
                     letter-spacing: 2px;
                     padding: 1%;
 
