--- a/less/footer.less
+++ b/less/footer.less
@@ -6,7 +6,9 @@
         height: 105px;
         background-color: rgb(7, 0, 2);
         
-    
+        .bottomContent {
+            margin: auto;
+        }
 
         img {
             height: 50px;
@@ -15,19 +17,36 @@
 
         .links {
             a {
-                margin-right: 1%;
+                
                 text-decoration: none;
                 font-size: 18px;
                 color: #FFFFFF;
             }
+            &:hover {
+                color: #FFB612;
+                text-decoration: underline overline;
+            }
+
+            span {
+                color: #FFF;
+            }
             
+        }
+
+        .copyright {
+            p {
+                text-decoration: none;
+                font-size: 18px;
+                color: #FFFFFF;
+                font-family: 'Rajdhani', sans-serif;
+            }
         }
 
         .social {
 
             img {
-                height: 50px;
-                width: 50px;
+                height: 25px;
+                width: 25px;
                 background-color: lightgray;
                 
             }
