--- a/less/header.less
+++ b/less/header.less
@@ -12,7 +12,7 @@ header {
             align-items: center;
             margin: 1%;
             font-family: 'Alegreya Sans SC', sans-serif;
-            font-size: 2.5em;
+            font-size: 2em;
             a {
                 text-decoration: none;
                 color: #FFFFFF;
@@ -28,23 +28,19 @@ header {
         }
 
         div.links {
-            margin: 1%;
+            margin: 0 1% 1%;
             display: flex;
             align-items: flex-end;
-            // border: 1px solid green;
-            width: 350px;
             a {
-               margin-right: 5%;
-            //    border: 1px solid dodgerblue;
+               margin-right: 10px;
                font-family: 'Rajdhani', sans-serif;
                text-decoration: none;
-               font-size: 1.5rem;
+               font-size: 1.3rem;
                color: #FFFFFF;
 
                &:hover {
                    color: #FFB612;
                    text-decoration: underline overline;
-                //    text-decoration-color: #FFB612;
                }
             }
         }
