--- a/less/intro.less
+++ b/less/intro.less
@@ -1,18 +1,39 @@
 .intro {
     height: 90vh;
-    background-image: url("/images/africanWomen.jpg");
+    background-image: url("/images/africanWomanPhone.jpg");
     background-size: cover;
     min-width: 100%;
-    // margin-top: -240px;
+    
     
     .box {
-        margin: 250px auto;
+        margin: 150px auto;
         height: min-content;
-        width: 1000px;
+        width: 800px;
         border: 1px solid black;
         background-color: #070002;
         opacity: 0.9;
-        // margin: auto;
+        
+        a {
+            color: #070002;
+        }
+
+        h2 {
+            font-family: 'Alegreya Sans SC', sans-serif;
+            text-align: center;
+            margin: 2% 0 1% ;
+            font-size: 2.5rem;
+            color: #fff;
+            letter-spacing: 3px;
+            font-weight: 900;
+        }
+
+        p {
+            margin: 2% 1%;
+            font-size: 1.5rem;
+            color: #fff;
+            letter-spacing: 2px;
+            font-weight: 700;
+        }
 
 
         .myButton {
@@ -27,9 +48,10 @@
             font-family:Arial;
             font-size:15px;
             font-weight:bold;
-            padding:6px 24px;
+            padding:6px;
             text-decoration:none;
             text-shadow:0px 1px 0px #ffee66;
+            margin: 1% 40% 3%;
         }
         .myButton:hover {
             background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
@@ -39,45 +61,11 @@
             position:relative;
             top:1px;
         }
-        
 
-
-        // padding: 20px 20px 30px;
-        // background: rgba(0, 0, 0, 0.9);
-        // text-align: center;
-        // transition: none 0s ease 0s;
-        // line-height: 42px;
-        // border-width: 0px;
-        // margin: 0px;
-        // letter-spacing: 2px;
-        // font-weight: 800;
-        // font-size: 30px;
-
-        a {
-            color: #070002;
-        }
-
-        h2 {
-            font-family: Rajdhani;
-            text-align: center;
-            margin: 2% 0 1% ;
-            font-size: 4rem;
-            color: #fff;
-            letter-spacing: 3px;
-            font-weight: 900;
-        }
 
         hr {
             border-top: 1px solid #8c8b8b;
-            margin: 0 %; 
-        }
-
-        p {
-            margin: 2% 1%;
-            font-size: 2em;
-            color: #fff;
-            letter-spacing: 2px;
-            font-weight: 700;
+            margin: 0; 
         }
     }
 }
