--- a/less/last.less
+++ b/less/last.less
@@ -1,14 +1,16 @@
 .last {
-    background-color: #FFB612;
+    background-color: #007A4D;
     height: min-content;
     
     h2 {
-        font-size: 100px;
-        margin: 5% auto;
+        font-size: 3.5rem;
+        margin: 5% auto 3%;
         padding-top: 3%;
         width: max-content;
         color: #070002;
-        font-family: 'Alegreya Sans SC', sans-serif;
+        font-family: 'Rajdhani', sans-serif;
+        font-weight: 900;
+        text-decoration: overline;
     }
 
     .main {
@@ -18,7 +20,9 @@
         .info {
             width: 20%;
             height: min-content;
-            background-color: #FFF;
+            background-color: #F4F0DB;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
             margin-bottom: 1%;
 
             hr {
@@ -36,12 +40,12 @@
                 margin: 2% auto 10%;
                 text-align: center;
                 font-family: 'Raleway', sans-serif;
-                font-size: 2.3rem;
+                font-size: 1.5rem;
             }
             p {
                 color: #070002;
                 font-family: 'Rajdhani', sans-serif;
-                font-size: 2rem;
+                font-size: 1.5rem;
                 margin: 0 2%;
             }
         }
