--- a/less/header.less
+++ b/less/header.less
@@ -46,3 +46,20 @@ header {
         }
     }
 }
+
+@media(max-width: 500px) {
+    header {
+        nav {
+            width: 100vw;
+            .logo h1 {
+                font-size: 20px;
+            }
+            .links {
+                a {
+                    font-size: 7px;
+                }
+            }
+            
+        }
+    }
+}
