--- a/less/intro.less
+++ b/less/intro.less
@@ -72,9 +72,14 @@
 
 @media(max-width: 500px) {
     .intro {
+        background-size: cover;
+        height: 300px;
+        width: 500px;
+
         .box {
-            width: 350px;
+            width: 250px;
             height: min-content;
+            margin: 20px auto 0;
             
             h2 {
                 font-size: 15px;
