--- a/less/header.less
+++ b/less/header.less
@@ -5,6 +5,7 @@ header {
         display: flex;
         justify-content: space-between;
         background-color: rgb(7, 0, 2);
+        width: 100vw;
 
         div.logo {
             color: white;
@@ -48,18 +49,15 @@ header {
 }
 
 @media(max-width: 500px) {
-    header {
         nav {
             width: 100vw;
             .logo h1 {
-                font-size: 20px;
+                font-size: 25px;
             }
-            .links {
-                a {
-                    font-size: 7px;
-                }
+            div.links a {
+                font-size: 5px;
             }
             
         }
-    }
+    
 }
