--- a/less/middle.less
+++ b/less/middle.less
@@ -9,6 +9,7 @@
     div.mission {
         margin: 0;
         height: min-content;
+        width: 100vw;
         background-color: #DE3831;
         margin-bottom: 20px;
 
@@ -36,8 +37,9 @@
     }
 
     .first, .second, .third {
-        margin: 3% 0;
+        margin: 3% auto;
         display: flex;
+        justify-content: space-around;
 
         .image {
             width: 40%;
@@ -51,8 +53,8 @@
                 }           
             }
             .target {
-                width: 50%;
-                margin: 0 1% 0 7%;
+                width: 40%;
+                // margin: 0 1% 0 7%;
                 border-radius: 8px;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
                 height: min-content;
@@ -60,7 +62,7 @@
 
                 h3 {
                     font-family: 'Raleway', sans-serif;
-                    font-size: 3rem;
+                    font-size: 2.5rem;
                     margin-bottom: 2%;
                     text-decoration:  underline #FFB612;
                     letter-spacing: 1px;
@@ -84,24 +86,25 @@
             
     }
 
-    .first, .third {
-        margin-left: 50px;
-    }
-
     .second {
         // background-color: #007A4D;
         
         .target {
-            margin: 0 7% 0 1%;
+            // margin: 0 7% 0 1%;
             vertical-align: top;
             }
         }
 }
 
+
+// **BEGINS INFO FOR MOBILE VIEW
 @media(max-width: 500px) {
     section.middle {
+        margin: 0;
+
         .mission {
             padding-top: 20px;
+            margin: 0;
             h2 {
                 font-size: 30px;
             }
@@ -113,15 +116,31 @@
         .first, .second, .third {
             display: flex;
             flex-direction: column;
+            margin: 0;
             .image {
+                img {
                 margin: 0;
-                height: 400px;
-                width: 100vw;
+                height: 350px;
+                width: 500px;
+                border-radius: 0;
+                }
+                
+               
             }
             .target {
                 width: 100vw;
                 margin: 0;
+                border-radius: 0;
+
+                h3 {
+                    font-size: 30px
+                }
             }
+        }
+
+        .second {
+            display: flex;
+            flex-direction: column-reverse
         }
         
     }
