--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,7 @@ header nav {
   display: flex;
   justify-content: space-between;
   background-color: #070002;
-  width: 100vw;
+  width: 100%;
 }
 header nav div.logo {
   color: white;
@@ -160,7 +160,7 @@ header nav div.links a {
   margin-right: 10px;
   font-family: 'Rajdhani', sans-serif;
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 15px;
   color: #FFFFFF;
 }
 header nav div.links a:hover {
@@ -168,21 +168,24 @@ header nav div.links a:hover {
   text-decoration: underline overline;
 }
 @media (max-width: 500px) {
-  nav {
-    width: 100vw;
+  header nav {
+    width: 100%;
   }
-  nav .logo h1 {
+  header nav .logo img {
+    display: none;
+  }
+  header nav h1 {
     font-size: 25px;
   }
-  nav div.links a {
-    font-size: 5px;
+  header nav .links a {
+    font-size: 3px;
   }
 }
 .intro {
   height: 90vh;
   background-image: url("/images/africanWomanPhone.jpg");
   background-size: cover;
-  width: 100vw;
+  width: 100%;
 }
 .intro .box {
   margin: 150px auto;
@@ -190,7 +193,7 @@ header nav div.links a:hover {
   width: 800px;
   border: 1px solid black;
   background-color: #070002;
-  opacity: 0.9;
+  opacity: 0.7;
 }
 .intro .box a {
   color: #070002;
@@ -244,7 +247,7 @@ header nav div.links a:hover {
   .intro {
     background-size: cover;
     height: 300px;
-    width: 500px;
+    width: 100%;
   }
   .intro .box {
     width: 250px;
@@ -276,7 +279,7 @@ header nav div.links a:hover {
 .middle div.mission {
   margin: 0;
   height: min-content;
-  width: 100vw;
+  width: 100%;
   background-color: #DE3831;
   margin-bottom: 20px;
 }
@@ -328,7 +331,7 @@ header nav div.links a:hover {
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
   height: min-content;
-  background-color: #F4F0DB;
+  background-color: #E3E3E3;
   opacity: 10;
 }
 .middle .first .target h3,
@@ -363,6 +366,7 @@ header nav div.links a:hover {
 @media (max-width: 500px) {
   section.middle {
     margin: 0;
+    max-width: 500px;
   }
   section.middle .mission {
     padding-top: 20px;
@@ -381,18 +385,22 @@ header nav div.links a:hover {
     flex-direction: column;
     margin: 0;
   }
+  section.middle .first .image,
+  section.middle .second .image,
+  section.middle .third .image {
+    width: 100%;
+  }
   section.middle .first .image img,
   section.middle .second .image img,
   section.middle .third .image img {
     margin: 0;
     height: 350px;
-    width: 500px;
     border-radius: 0;
   }
   section.middle .first .target,
   section.middle .second .target,
   section.middle .third .target {
-    width: 100vw;
+    width: 100%;
     margin: 0;
     border-radius: 0;
   }
@@ -400,6 +408,11 @@ header nav div.links a:hover {
   section.middle .second .target h3,
   section.middle .third .target h3 {
     font-size: 30px;
+  }
+  section.middle .first .target p,
+  section.middle .second .target p,
+  section.middle .third .target p {
+    padding: 2%;
   }
   section.middle .second {
     display: flex;
@@ -409,7 +422,7 @@ header nav div.links a:hover {
 .last {
   background-color: #007A4D;
   height: min-content;
-  width: 100vw;
+  width: 100%;
 }
 .last h2 {
   font-size: 3.5rem;
@@ -428,7 +441,7 @@ header nav div.links a:hover {
 .last .main .info {
   width: 20%;
   height: min-content;
-  background-color: #F4F0DB;
+  background-color: #E3E3E3;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
   margin-bottom: 1%;
@@ -453,7 +466,7 @@ header nav div.links a:hover {
   color: #070002;
   font-family: 'Rajdhani', sans-serif;
   font-size: 1.5rem;
-  margin: 0 2%;
+  padding: 0 15px 20px;
 }
 @media (max-width: 500px) {
   .last {
@@ -469,7 +482,7 @@ header nav div.links a:hover {
     flex-direction: column;
   }
   .last .main .info {
-    width: 480px;
+    width: 460px;
     margin: 10px;
   }
   .last .main .info h3 {
@@ -481,49 +494,53 @@ header nav div.links a:hover {
   }
 }
 .footer {
-  width: 100vw;
+  width: 100%;
 }
 .footer div.bttm {
   border: 1px solid black;
   display: flex;
   justify-content: space-between;
-  height: 105px;
+  align-items: center;
+  height: 88px;
+  max-width: 100%;
   background-color: #070002;
 }
 .footer div.bttm .bottomContent {
-  margin: auto;
+  margin: 0 10px;
 }
 .footer div.bttm img {
-  height: 50px;
-  width: 50px;
+  height: 25px;
+  width: 25px;
 }
-.footer div.bttm .links a {
+.footer div.bttm .bttm-link a {
   text-decoration: none;
-  font-size: 18px;
+  font-size: 1px;
   color: #FFFFFF;
 }
-.footer div.bttm .links:hover {
+.footer div.bttm .bttm-link:hover {
   color: #FFB612;
   text-decoration: underline overline;
 }
-.footer div.bttm .links span {
+.footer div.bttm .bttm-link span {
   color: #FFF;
 }
 .footer div.bttm .copyright p {
   text-decoration: none;
-  font-size: 18px;
+  font-size: 14px;
   color: #FFFFFF;
   font-family: 'Rajdhani', sans-serif;
 }
+.footer div.bttm .social {
+  display: flex;
+  justify-content: space-between;
+}
+.footer div.bttm .social .facebook {
+  margin-left: 10px;
+}
 .footer div.bttm .social img {
-  height: 25px;
-  width: 25px;
   background-color: lightgray;
 }
 @media (max-width: 500px) {
-  footer .bttm .bottomContent {
-    font-size: 15px;
-  }
   footer .bttm .logo img {
     height: 20px;
     width: 20px;
