--- a/less/header.less
+++ b/less/header.less
@@ -5,7 +5,7 @@ header {
         display: flex;
         justify-content: space-between;
         background-color: rgb(7, 0, 2);
-        width: 100vw;
+        width: 100%;
 
         div.logo {
             color: white;
@@ -36,7 +36,7 @@ header {
                margin-right: 10px;
                font-family: 'Rajdhani', sans-serif;
                text-decoration: none;
-               font-size: 1.3rem;
+               font-size: 15px;
                color: #FFFFFF;
 
                &:hover {
@@ -49,15 +49,27 @@ header {
 }
 
 @media(max-width: 500px) {
-        nav {
-            width: 100vw;
-            .logo h1 {
-                font-size: 25px;
-            }
-            div.links a {
-                font-size: 5px;
+
+            header {
+                nav {
+                    width: 100%;
+                    
+                    .logo {
+                        img {
+                            display:none;
+                        }
+                        
+                    }
+                    h1 {
+                        font-size: 25px;
+                    }
+                    .links {
+                        a {
+                            font-size: 3px;
+                        }
+                    }   
+                }
             }
             
-        }
     
 }
