--- a/less/intro.less
+++ b/less/intro.less
@@ -2,7 +2,7 @@
     height: 90vh;
     background-image: url("/images/africanWomanPhone.jpg");
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     
     
     .box {
@@ -11,7 +11,7 @@
         width: 800px;
         border: 1px solid black;
         background-color: #070002;
-        opacity: 0.9;
+        opacity: 0.7;
         
         a {
             color: #070002;
@@ -74,7 +74,7 @@
     .intro {
         background-size: cover;
         height: 300px;
-        width: 500px;
+        width: 100%;
 
         .box {
             width: 250px;
