--- a/less/last.less
+++ b/less/last.less
@@ -1,7 +1,7 @@
 .last {
     background-color: #007A4D;
     height: min-content;
-    width: 100vw;
+    width: 100%;
     
     h2 {
         font-size: 3.5rem;
@@ -21,7 +21,7 @@
         .info {
             width: 20%;
             height: min-content;
-            background-color: #F4F0DB;
+            background-color: #E3E3E3;
             border-radius: 8px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
             margin-bottom: 1%;
@@ -33,7 +33,7 @@
                 background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
                 background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
                 background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-                margin-bottom: 5%
+                margin-bottom: 5%;
             }
 
             h3 {
@@ -47,7 +47,7 @@
                 color: #070002;
                 font-family: 'Rajdhani', sans-serif;
                 font-size: 1.5rem;
-                margin: 0 2%;
+                padding: 0 15px 20px;
             }
         }
     }
@@ -70,7 +70,7 @@
             flex-direction: column;
 
             .info {
-                width: 480px;
+                width: 460px;
                 margin: 10px;
 
                 h3 {
